# FDA-watch

./: .dockerignore  .gitignore  .gitpod.yml  Dockerfile  pyproject.toml  render.yaml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/: main.py
data/reference/: soi_standards.json  violation_taxonomy.json
src/integrations/: classaction_client.py  courtlistener_client.py  cpsc_client.py  echa_client.py  eurlex_client.py  fda_guidance_client.py  federal_register_client.py  ftc_client.py  ifra_client.py  nad_client.py  prop65_client.py  rapex_client.py  rasff_client.py  sccs_client.py  state_ag_client.py
src/models/: __init__.py  alerts.py  enforcement.py  enums.py  regulation.py
src/services/: alert_service.py  auth.py  classifier.py  database.py  dedup_service.py  export_service.py  ingestion_service.py  migrate_json_to_sqlite.py  openfda_client.py  search_service.py  (+6 more)
tests/: test_alert_service.py  test_api.py  test_auth.py  test_classaction_client.py  test_classifier.py  test_courtlistener_client.py  test_cpsc_client.py  test_database.py  test_dedup_service.py  test_echa_client.py  test_eurlex_client.py  test_export_service.py  test_fda_guidance_client.py  test_federal_register_client.py  test_ftc_client.py  test_ifra_client.py  test_models.py  test_nad_client.py  test_openfda_client.py  test_prop65_client.py  test_rapex_client.py  test_rasff_client.py  test_regulation_search_service.py  test_sccs_client.py  test_scheduler_service.py  test_soi_enricher.py  test_source_preferences.py  test_state_ag_client.py
ui/: index.html
